Restore index.html with complete content

--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
     </div>
 
     <div class="hero-box">
-      <!-- TODO: Chèn ảnh giao diện phần mềm CodeBench -->
-      <p><em>Hình ảnh giao diện CodeBench sẽ được bổ sung.</em></p>
+      <img src="img/Main view.png" alt="Giao diện chính CodeBench" style="width:100%; border-radius:10px; display:block;" />
     </div>
   </div>
 </section>
