--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </div>
 
     <div class="hero-box">
-      <img src="img/main-view.png" alt="Giao diện chính CodeBench" style="width:100%; border-radius:10px; display:block;" />
+      <img src="imgs/main-view.png" alt="Giao diện chính CodeBench" style="width:100%; border-radius:10px; display:block;" />
     </div>
   </div>
 </section>
@@ -286,4 +286,5 @@
 
 </body>
 </html>
+
 
