--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
     <p style="margin-top: 24px;">
       <a href="https://github.com/huycitEIU/CodeBench" target="_blank">Xem mã nguồn trên GitHub →</a>
     </p>
+    <p style="margin-top: 12px;">
+      <a href="https://github.com/huycitEIU/CodeBench/releases/latest" class="download-btn">⬇ Tải bản cài đặt</a>
+    </p>
   </div>
 </section>
 
@@ -235,7 +238,7 @@
       <div class="card"><h3>Chấm bài offline</h3><p>Biên dịch và chạy với test case cục bộ.</p></div>
       <div class="card"><h3>Chuẩn hóa môi trường</h3><p>Giảm sai lệch giữa các máy.</p></div>
       <div class="card"><h3>Phù hợp lớp học</h3><p>Thiết kế cho phòng máy và môn học cơ bản.</p></div>
-      <!-- <div class="card"><h3>StuKit ecosystem</h3><p>Dễ mở rộng, tích hợp công cụ khác.</p></div> -->
+      <div class="card"><h3>StuKit ecosystem</h3><p>Dễ mở rộng, tích hợp công cụ khác.</p></div>
     </div>
   </div>
 </section>
@@ -245,8 +248,8 @@
     <h2>Hệ sinh thái StuKit</h2>
     <ul>
       <li><strong>CodeBench</strong> – Offline Judge</li>
-      <!-- <li><strong>Flow</strong> – Công cụ hỗ trợ quy trình học tập (kế hoạch)</li>
-      <li><strong>PlanU</strong> – Quản lý kế hoạch cá nhân (kế hoạch)</li> -->
+      <li><strong>Flow</strong> – Công cụ hỗ trợ quy trình học tập (kế hoạch)</li>
+      <li><strong>PlanU</strong> – Quản lý kế hoạch cá nhân (kế hoạch)</li>
     </ul>
   </div>
 </section>
