Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <a href="https://github.com/huycitEIU/CodeBench" target="_blank">Xem mã nguồn trên GitHub →</a>
     </p>
     <p style="margin-top: 12px;">
-      <a href="https://github.com/huycitEIU/CodeBench/releases/latest" class="download-btn">⬇ Tải bản cài đặt</a>
+      <a href="https://github.com/huycitEIU/CodeBench/releases/download/Stable/CodeBench_Setup_v2.0.0.exe" class="download-btn">⬇ Tải bản cài đặt</a>
     </p>
   </div>
 </section>
@@ -289,3 +289,4 @@
 
 </body>
 </html>
+
